--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -50,6 +50,7 @@ jobs:
         run: |
           cd frontend
           npm install
+          npm install -g @angular/cli
 
       - name: Ejecutar pruebas de Angular
         run: |
