--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -55,6 +55,6 @@ jobs:
       - name: Ejecutar pruebas de Angular
         run: |
           cd frontend
-          ng test
+          ng test --watch=false --browsers=ChromeHeadless
 
       - run: echo "🍏 El estado de la tarea es ${{ job.status }}."
