--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.8'
 services:
   #Configuracion servicio MySQL
   mysql:
@@ -22,6 +21,26 @@ services:
       - "8081:80"
     depends_on:
       - mysql
+  # Configuración servicio Spring Boot
+  spring-boot-app:
+    build:
+      context: ./server
+      dockerfile: Dockerfile
+    ports:
+      - "8080:8080"
+    depends_on:
+      - mysql
+  # Configuración servicio Angular
+  angular-app:
+    build:
+      context: .
+      dockerfile: frontend/Dockerfile
+    ports:
+      - "4200:4200"
+    volumes:
+      - ./frontend:/app
+      - /app/node_modules
+    depends_on:
+      - mysql
 volumes:
   mysql_data:
-
