--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,5 +1,11 @@
+# Construyo el JAR - Omitiendo TESTS
+FROM maven:3.9.5-amazoncorretto-17 AS build
+WORKDIR /app
+COPY . .
+RUN mvn clean package -DskipTests
+
 FROM openjdk:17-jdk-alpine
 WORKDIR /app
-COPY target/*.jar app.jar
+COPY --from=build /app/target/*.jar app.jar
 EXPOSE 8080
 CMD ["java", "-jar", "app.jar"]
