--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,11 +1,12 @@
-# Construyo el JAR - Omitiendo TESTS
+# Usamos la imagen de Maven con JDK 17 para construir y ejecutar la aplicación
 FROM maven:3.9.5-amazoncorretto-17 AS build
 WORKDIR /app
 COPY . .
-RUN mvn clean package -DskipTests
+RUN mvn clean install -DskipTests
 
-FROM openjdk:17-jdk-alpine
+# Imagen para ejecutar la aplicación en modo desarrollo
+FROM maven:3.9.5-amazoncorretto-17
 WORKDIR /app
-COPY --from=build /app/target/*.jar app.jar
+COPY --from=build /app /app
 EXPOSE 8080
-CMD ["java", "-jar", "app.jar"]
+CMD ["mvn", "spring-boot:run"]
