--- a/server/pom.xml
+++ b/server/pom.xml
@@ -44,8 +44,13 @@
             <artifactId>mysql-connector-j</artifactId>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <scope>runtime</scope>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
-
     <build>
         <plugins>
             <plugin>
@@ -54,5 +59,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
