--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=server
 spring.devtools.restart.enabled=true
 spring.devtools.livereload.enabled=true
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.datasource.url=jdbc:mysql://localhost:3307/tpifinal
 spring.datasource.username=root
 spring.datasource.password=root
-spring.datasource.url=jdbc:mysql://localhost:3307/tpifinal
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
