--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -6,7 +6,17 @@ on: [push]
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
-
+    
+    services:
+      mysql:
+        image: mysql:8.0
+        env:
+          MYSQL_ROOT_PASSWORD: root
+          MYSQL_DATABASE: tpifinal
+        options: --health-cmd="mysqladmin ping --silent" --health-interval=10s --health-timeout=5s --health-retries=10
+        ports:
+          - "3307:3306" 
+          
     steps:
       - name: Configurar JDK 17
         uses: actions/setup-java@v3
