--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -16,6 +16,8 @@ jobs:
         options: --health-cmd="mysqladmin ping --silent" --health-interval=10s --health-timeout=5s --health-retries=10
         ports:
           - "3307:3306" 
+        volumes:
+          - ./db/db.sql:/docker-entrypoint-initdb.d/db.sql
           
     steps:
       - name: Configurar JDK 17
