error cypress y jasmin

--- a/frontend/tsconfig.spec.json
+++ b/frontend/tsconfig.spec.json
@@ -11,5 +11,9 @@
   "include": [
     "src/**/*.spec.ts",
     "src/**/*.d.ts"
+  ],
+  "exclude": [
+    "cypress/**/*.ts",
+    "cypress.config.ts"
   ]
 }
