--- a/server/src/main/resources/application-docker.properties
+++ b/server/src/main/resources/application-docker.properties
@@ -2,7 +2,7 @@ spring.application.name=server
 spring.devtools.restart.enabled=true
 spring.devtools.livereload.enabled=true
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3307/tpifinal
+spring.datasource.url=jdbc:mysql://mysql:3306/tpifinal
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.datasource.username=root
 spring.datasource.password=root
