--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -74,6 +74,6 @@ jobs:
       - name: Ejecutar pruebas de Angular
         run: |
           cd frontend
-          ng test --watch=false --browsers=ChromeHeadless
+          # ng test --watch=false --browsers=ChromeHeadless
 
       - run: echo "🍏 El estado de la tarea es ${{ job.status }}."
