--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.1",
     "bootstrap": "^5.3.3",
+    "echarts": "^5.5.1",
     "express": "^4.18.2",
     "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
