agregue una etiqueta para filtrar las alertas por tipo

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "bootstrap": "^5.3.3",
     "echarts": "^5.5.1",
     "express": "^4.18.2",
+    "frontend": "file:",
     "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -43,6 +44,7 @@
     "cypress": "^13.13.3",
     "cypress-visual-regression": "^5.1.0",
     "jasmine-core": "~5.2.0",
+    "jasmine-spec-reporter": "^7.0.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
