--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,5 +47,38 @@ services:
       - /app/node_modules
     depends_on:
       - mysql
+  # Configuración servicio InfluxDB
+  influxdb:
+    image: influxdb:2.4
+    container_name: influxdb
+    environment:
+      - DOCKER_INFLUXDB_INIT_MODE=setup
+      - DOCKER_INFLUXDB_INIT_USERNAME=admin
+      - DOCKER_INFLUXDB_INIT_PASSWORD=adminpassword
+      - DOCKER_INFLUXDB_INIT_ORG=grupo10
+      - DOCKER_INFLUXDB_INIT_BUCKET=grupo10bucket
+      - DOCKER_INFLUXDB_INIT_RETENTION=1w
+      - DOCKER_INFLUXDB_INIT_ADMIN_TOKEN=grupo10token
+    ports:
+      - "8086:8086"
+    volumes:
+      - influxdb_data:/var/lib/influxdb2
+    depends_on:
+      - mysql
+  # Configuración servicio Grafana
+  grafana:
+    image: grafana/grafana:latest
+    container_name: grafana
+    ports:
+      - "3000:3000"
+    environment:
+      - GF_SECURITY_ADMIN_USER=admin
+      - GF_SECURITY_ADMIN_PASSWORD=adminpassword
+    volumes:
+      - grafana_data:/var/lib/grafana
+    depends_on:
+      - influxdb
 volumes:
   mysql_data:
+  influxdb_data:
+  grafana_data:
