--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-spring.application.name=server
-spring.devtools.restart.enabled=true
-spring.devtools.livereload.enabled=true
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3307/tpifinal
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.datasource.username=root
-spring.datasource.password=root
+spring.application.name=${SPRING_APPLICATION_NAME}
+spring.devtools.restart.enabled=${SPRING_DEVTOOLS_RESTART_STATUS}
+spring.devtools.livereload.enabled=${SPRING_DEVTOOLS_LIVERELOAD_STATUS}
+spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL_AUTO}
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.jpa.properties.hibernate.dialect=${SPRING_JPA_PROPERTIES_HIBERNATE_DIALECT}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
