--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -15,7 +15,7 @@ jobs:
           MYSQL_DATABASE: ${{ secrets.MYSQL_DATABASE }}
         options: --health-cmd="mysqladmin ping --silent" --health-interval=10s --health-timeout=5s --health-retries=10
         ports:
-          - "3307:3306" 
+          - "3306:3306" 
           
     steps:
       - name: Configurar JDK 17
@@ -35,9 +35,6 @@ jobs:
       - name: Ejecutar queries SQL
         run: |
           mysql -h127.0.0.1 -P3307 -u${{ secrets.MYSQL_ROOT_PASSWORD }} -p${{ secrets.MYSQL_ROOT_PASSWORD }} ${{ secrets.MYSQL_DATABASE }} < $GITHUB_WORKSPACE/db/db.sql
-          
-      - name: Navegar a la carpeta del servidor
-        run: cd server
 
       - name: Cachear paquetes de Maven
         uses: actions/cache@v3
@@ -55,11 +52,11 @@ jobs:
           cd server
           mvn clean install
 
-      - name: Ejecutar pruebas
+      - name: Ejecutar pruebas de Maven
         run: |
           cd server
           mvn test
-      
+
       - name: Configurar Node.js para Angular
         uses: actions/setup-node@v3
         with:
@@ -75,5 +72,26 @@ jobs:
         run: |
           cd frontend
           # ng test --watch=false --browsers=ChromeHeadless
+
+      # Agregar JWT_SECRET como variable de entorno
+      - name: Configurar JWT_SECRET
+        run: |
+          echo "JWT_SECRET=${{ secrets.JWT_SECRET }}" >> $GITHUB_ENV
+
+      # Agregar variables de entorno del Broker MQTT
+      - name: Configurar variables del Broker MQTT
+        run: |
+          echo "MQTT_BROKER=${{ secrets.MQTT_BROKER }}" >> $GITHUB_ENV
+          echo "MQTT_CLIENT_ID=${{ secrets.MQTT_CLIENT_ID }}" >> $GITHUB_ENV
+          echo "MQTT_USERNAME=${{ secrets.MQTT_USERNAME }}" >> $GITHUB_ENV
+          echo "MQTT_PASSWORD=${{ secrets.MQTT_PASSWORD }}" >> $GITHUB_ENV
+
+      # Agregar variables de entorno para InfluxDB
+      - name: Configurar variables de entorno de InfluxDB
+        run: |
+          echo "INFLUXDB_TOKEN=${{ secrets.INFLUXDB_TOKEN }}" >> $GITHUB_ENV
+          echo "INFLUXDB_ORG=${{ secrets.INFLUXDB_ORG }}" >> $GITHUB_ENV
+          echo "INFLUXDB_BUCKET=${{ secrets.INFLUXDB_BUCKET }}" >> $GITHUB_ENV
+          echo "INFLUXDB_URL=${{ secrets.INFLUXDB_URL }}" >> $GITHUB_ENV
 
       - run: echo "🍏 El estado de la tarea es ${{ job.status }}."
