--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -1,5 +1,5 @@
 name: ci_cd
-run-name: ${{ github.actor }} está probando GitHub Actions 🚀
+run-name: ${{ github.actor }} está probando GitHub Actions. 🚀
 
 on: [push]
 
