--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,6 @@
     "@angular/platform-server": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.1",
-    "bootstrap": "^5.3.3",
     "echarts": "^5.5.1",
     "express": "^4.18.2",
     "frontend": "file:",
@@ -37,6 +36,7 @@
     "@angular-devkit/build-angular": "^18.2.1",
     "@angular/cli": "^18.2.1",
     "@angular/compiler-cli": "^18.2.0",
+    "@tailwindcss/typography": "^0.5.15",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
