-fixed docker-compose configuration -added python to Dockerfile for dependecies -added optionalDependecies to package.json

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,7 +1,9 @@
 FROM node:18-alpine
 WORKDIR /app
-COPY frontend/package*.json ./
-RUN npm install -g @angular/cli@17 && npm install
+COPY frontend/package.json ./
+COPY frontend/package-lock.json ./
+RUN apk add --no-cache python3 build-base
+RUN npm install -g @angular/cli@18 && npm install
 COPY frontend/. .
 EXPOSE 4200
 CMD ["npm", "start"]
