--- a/frontend/package.json
+++ b/frontend/package.json
@@ -54,5 +54,8 @@
     "postcss": "^8.4.45",
     "tailwindcss": "^3.4.12",
     "typescript": "~5.5.2"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-musl": "4.9.5"
   }
 }
