--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,9 +25,11 @@
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.1",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.4",
     "echarts": "^5.5.1",
     "express": "^4.18.2",
     "frontend": "file:",
+    "ng2-charts": "^6.0.1",
     "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
