--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,14 +1,9 @@
-FROM node:18-alpine AS build
+FROM node:18-alpine
 WORKDIR /app
-COPY frontend/package.json frontend/package-lock.json ./
+COPY frontend/package.json ./
+COPY frontend/package-lock.json ./
 RUN apk add --no-cache python3 build-base
 RUN npm install -g @angular/cli@18 && npm install
 COPY frontend/. .
-RUN ng build --prod
-FROM nginx:alpine
-COPY --from=build /app/dist/tu-proyecto-angular /usr/share/nginx/html
-COPY nginx.conf /etc/nginx/conf.d/default.conf
-COPY entrypoint.sh /entrypoint.sh
-RUN chmod +x /entrypoint.sh
 EXPOSE 80
-CMD ["/entrypoint.sh"]
+CMD ["sh", "-c", "ng serve --host 0.0.0.0 --port $PORT"]
