--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,8 @@ services:
       - SPRING_JPA_PROPERTIES_HIBERNATE_DIALECT=${SPRING_JPA_PROPERTIES_HIBERNATE_DIALECT}
       - SPRING_DATASOURCE_USERNAME=${SPRING_DATASOURCE_USERNAME}
       - SPRING_DATASOURCE_PASSWORD=${SPRING_DATASOURCE_PASSWORD}
+      - SPRING_EMAIL_USERNAME=${SPRING_EMAIL_USERNAME}
+      - SPRING_EMAIL_PASSWORD=${SPRING_EMAIL_PASSWORD}
       - INFLUXDB_TOKEN=${INFLUXDB_INIT_ADMIN_TOKEN}
       - INFLUXDB_ORG=${INFLUXDB_INIT_ORG}
       - INFLUXDB_BUCKET=${INFLUXDB_INIT_BUCKET}
@@ -51,17 +53,6 @@ services:
       - influxdb
       - mosquitto
 
-  angular-app:
-    build:
-      context: .
-      dockerfile: frontend/Dockerfile
-    ports:
-      - "${ANGULAR_PORT}:4200"
-    volumes:
-      - ./frontend:/app
-      - /app/node_modules
-    depends_on:
-      - mysql
 
   influxdb:
     image: influxdb:2.4
