--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -30,8 +30,8 @@
               }
             ],
             "styles": [
+              "src/custom-theme.scss",
               "node_modules/ngx-toastr/toastr.css",
-              "@angular/material/prebuilt-themes/azure-blue.css",
               "src/styles.css"
             ],
             "server": "src/main.server.ts",
