--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-server": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.1",
+    "@fortawesome/angular-fontawesome": "^0.15.0",
     "echarts": "^5.5.1",
     "express": "^4.18.2",
     "frontend": "file:",
