--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -32,7 +32,8 @@
             "styles": [
               "src/custom-theme.scss",
               "node_modules/ngx-toastr/toastr.css",
-              "src/styles.css"
+              "src/styles.css",
+               "node_modules/@fortawesome/fontawesome-free/css/all.min.css"
             ],
             "server": "src/main.server.ts",
             "prerender": true,
