--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.1",
     "@fortawesome/angular-fontawesome": "^0.15.0",
+    "@fortawesome/fontawesome-free": "^6.6.0",
     "echarts": "^5.5.1",
     "express": "^4.18.2",
     "frontend": "file:",
