--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,11 +26,16 @@
     "@angular/ssr": "^18.2.1",
     "@fortawesome/angular-fontawesome": "^0.15.0",
     "@fortawesome/fontawesome-free": "^6.6.0",
+    "@stomp/stompjs": "^7.0.0",
+    "@types/sockjs-client": "^1.5.4",
+    "angular-sockjs": "^0.1.0",
     "echarts": "^5.5.1",
     "express": "^4.18.2",
     "frontend": "file:",
+    "global": "^4.4.0",
     "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
+    "sockjs-client": "^1.6.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
   },
