--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
       - mysql_data:/var/lib/mysql
     ports:
       - "${MYSQL_PORT}:3306"
+    networks:
+      - my_network
 
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
@@ -20,6 +22,8 @@ services:
       - "${PHPMYADMIN_PORT}:80"
     depends_on:
       - mysql
+    networks:
+      - my_network
 
   spring-boot-app:
     build:
@@ -53,6 +57,8 @@ services:
       - influxdb
       - mosquitto
       - mysql
+    networks:
+      - my_network
 
   angular-app:
     build:
@@ -65,6 +71,8 @@ services:
       - /app/node_modules
     depends_on:
       - mysql
+    networks:
+      - my_network
 
   influxdb:
     image: influxdb:2.4
@@ -83,6 +91,8 @@ services:
       - influxdb_data:/var/lib/influxdb2
     depends_on:
       - mysql
+    networks:
+      - my_network
 
   grafana:
     image: grafana/grafana:latest
@@ -95,11 +105,14 @@ services:
       - GF_AUTH_ANONYMOUS_ENABLED=true
       - GF_AUTH_ANONYMOUS_ORG_ROLE=Viewer
       - GF_ALLOW_EMBEDDING=true
+      - GF_SERVER_ALLOW_EMBEDDING=true
     volumes:
       - grafana_data:/var/lib/grafana
       - ./grafana/provisioning:/etc/grafana/provisioning
     depends_on:
       - influxdb
+    networks:
+      - my_network
 
   mosquitto:
     image: eclipse-mosquitto
@@ -115,8 +128,14 @@ services:
       - LOG_DESTINATION=stdout
       - ALLOW_ANONYMOUS=true
     restart: always
+    networks:
+      - my_network
 
 volumes:
   mysql_data:
   influxdb_data:
   grafana_data:
+
+networks:
+  my_network:
+    driver: bridge
