--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "express": "^4.18.2",
     "frontend": "file:",
     "global": "^4.4.0",
+    "intro.js": "^7.2.0",
     "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
     "sockjs-client": "^1.6.1",
@@ -47,6 +48,7 @@
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
+    "@types/stompjs": "^2.3.9",
     "autoprefixer": "^10.4.20",
     "cypress": "^13.13.3",
     "cypress-visual-regression": "^5.1.0",
