--- a/frontend/.vscode/launch.json
+++ b/frontend/.vscode/launch.json
@@ -7,14 +7,14 @@
       "type": "chrome",
       "request": "launch",
       "preLaunchTask": "npm: start",
-      "url": "http://localhost:4200/"
+      "url": "http://lytics.dyndns.org:4200/"
     },
     {
       "name": "ng test",
       "type": "chrome",
       "request": "launch",
       "preLaunchTask": "npm: test",
-      "url": "http://localhost:9876/debug.html"
+      "url": "http://lytics.dyndns.org:9876/debug.html"
     }
   ]
 }
