--- a/server/pom.xml
+++ b/server/pom.xml
@@ -103,6 +103,12 @@
             <artifactId>influxdb-client-java</artifactId>
             <version>6.8.0</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.modelmapper/modelmapper -->
+        <dependency>
+            <groupId>org.modelmapper</groupId>
+            <artifactId>modelmapper</artifactId>
+            <version>3.2.1</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-mail</artifactId>
