- create bucket in influxdb - create cleaning task every hour in influx

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -95,6 +95,8 @@ services:
       - "${INFLUXDB_PORT}:8086"
     volumes:
       - influxdb_data:/var/lib/influxdb2
+      - ./influxdb/init_influxdb.sh:/docker-entrypoint-initdb.d/init_influxdb.sh
+      - ./influxdb/aggregate_task.flux:/docker-entrypoint-initdb.d/aggregate_task.flux
     depends_on:
       - mysql
     networks:
