--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -97,6 +97,7 @@ services:
       - influxdb_data:/var/lib/influxdb2
       - ./influxdb/init_influxdb.sh:/docker-entrypoint-initdb.d/init_influxdb.sh
       - ./influxdb/aggregate_task.flux:/docker-entrypoint-initdb.d/aggregate_task.flux
+      - ./influxdb/aggregate_task_hist.flux:/docker-entrypoint-initdb.d/aggregate_task_hist.flux
     depends_on:
       - mysql
     networks:
