- optimize api /total-energy

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,7 +44,8 @@ services:
       - SPRING_EMAIL_PASSWORD=${SPRING_EMAIL_PASSWORD}
       - INFLUXDB_TOKEN=${INFLUXDB_INIT_ADMIN_TOKEN}
       - INFLUXDB_ORG=${INFLUXDB_INIT_ORG}
-      - INFLUXDB_BUCKET=${INFLUXDB_INIT_BUCKET}
+      - INFLUXDB_BUCKET_HISTORIC=${INFLUXDB_BUCKET_HIST}
+      - INFLUXDB_BUCKET_REALTIME=${INFLUXDB_BUCKET_REAL}
       - INFLUXDB_URL=${INFLUXDB_URL}
 #      - MQTT_BROKER=${MQTT_BROKER}
 #      - MQTT_CLIENT_ID=${MQTT_CLIENT_ID}
@@ -88,7 +89,7 @@ services:
       - DOCKER_INFLUXDB_INIT_USERNAME=${INFLUXDB_INIT_USERNAME}
       - DOCKER_INFLUXDB_INIT_PASSWORD=${INFLUXDB_INIT_PASSWORD}
       - DOCKER_INFLUXDB_INIT_ORG=${INFLUXDB_INIT_ORG}
-      - DOCKER_INFLUXDB_INIT_BUCKET=${INFLUXDB_INIT_BUCKET}
+      - DOCKER_INFLUXDB_INIT_BUCKET=${INFLUXDB_BUCKET_REAL}
       - DOCKER_INFLUXDB_INIT_RETENTION=${INFLUXDB_INIT_RETENTION}
       - DOCKER_INFLUXDB_INIT_ADMIN_TOKEN=${INFLUXDB_INIT_ADMIN_TOKEN}
     ports:
