--- a/mosquitto/config/mosquitto.conf
+++ b/mosquitto/config/mosquitto.conf
@@ -1,4 +1,5 @@
-allow_anonymous true
+allow_anonymous false
+password_file /mosquitto/config/mosquitto.passwd
 listener 1883
 persistence true
 persistence_location /mosquitto/data/
