--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "@fortawesome/angular-fontawesome": "^0.15.0",
     "@fortawesome/fontawesome-free": "^6.6.0",
     "@stomp/stompjs": "^7.0.0",
+    "@types/jspdf": "^2.0.0",
     "@types/sockjs-client": "^1.5.4",
     "angular-sockjs": "^0.1.0",
     "date-fns": "^4.1.0",
@@ -51,12 +52,15 @@
     "@angular/compiler-cli": "^18.2.0",
     "@tailwindcss/typography": "^0.5.15",
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.14",
     "@types/node": "^18.18.0",
     "@types/stompjs": "^2.3.9",
     "autoprefixer": "^10.4.20",
     "cypress": "^13.13.3",
     "cypress-visual-regression": "^5.1.0",
     "daisyui": "^4.12.10",
+    "jest": "^29.7.0",
+    "jest-preset-angular": "^14.2.4",
     "postcss": "^8.4.45",
     "tailwindcss": "^3.4.12",
     "typescript": "~5.5.2"
