--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,7 +28,6 @@
     "@fortawesome/angular-fontawesome": "^0.15.0",
     "@fortawesome/fontawesome-free": "^6.6.0",
     "@stomp/stompjs": "^7.0.0",
-    "@types/jspdf": "^2.0.0",
     "@types/sockjs-client": "^1.5.4",
     "angular-sockjs": "^0.1.0",
     "date-fns": "^4.1.0",
@@ -36,6 +35,8 @@
     "express": "^4.18.2",
     "frontend": "file:",
     "global": "^4.4.0",
+    "gojs": "^3.0.13",
+    "gojs-angular": "^2.0.9",
     "intro.js": "^7.2.0",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
@@ -53,6 +54,7 @@
     "@tailwindcss/typography": "^0.5.15",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.14",
+    "@types/jspdf": "^2.0.0",
     "@types/node": "^18.18.0",
     "@types/stompjs": "^2.3.9",
     "autoprefixer": "^10.4.20",
