--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,8 +18,9 @@ services:
       PMA_HOST: mysql
       PMA_USER: ${PMA_USER}
       PMA_PASSWORD: ${PMA_PASSWORD}
-    ports:
-      - "${PHPMYADMIN_PORT}:80"
+    # No exponer puerto del backend
+    # ports:
+    #  - "${PHPMYADMIN_PORT}:80"
     depends_on:
       - mysql
     networks:
@@ -71,8 +72,9 @@ services:
     build:
       context: .
       dockerfile: frontend/Dockerfile
-    ports:
-      - "${ANGULAR_PORT}:4200"
+    # No exponer el puerto del frontend
+    # ports:
+    #  - "${ANGULAR_PORT}:4200"
     volumes:
       - ./frontend:/app
       - /app/node_modules
@@ -147,7 +149,6 @@ services:
     ports:
       - "80:80"    # Puerto HTTP
       - "443:443"  # Puerto HTTPS
-      - "8443:8443" # Puerto HTTPS adicional para el backend
     volumes:
       - ./Caddyfile:/etc/caddy/Caddyfile
       - caddy_data:/data
