se agrego el campo locacion en la tabla y tambien en el informe pdf

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -21,8 +21,9 @@
     "experimentalDecorators": true,
     "moduleResolution": "bundler",
     "importHelpers": true,
-    "target": "ES2022",
-    "module": "ES2022",
+    "target": "es6",
+    "module": "commonjs",
+    "allowJs": true,
     "lib": [
       "ES2022",
       "dom"
