--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve --host 0.0.0.0 --poll 2000",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
+    "test": "jest",
+    "test:watch": "jest --watch",
     "serve:ssr:frontend": "node dist/frontend/server/server.mjs",
     "test:visual": "TYPE=regression npx cypress run"
   },
@@ -51,6 +52,7 @@
     "@tailwindcss/typography": "^0.5.15",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
+    "@types/jest": "^29.5.14",
     "@types/node": "^18.18.0",
     "@types/stompjs": "^2.3.9",
     "autoprefixer": "^10.4.20",
@@ -59,11 +61,9 @@
     "daisyui": "^4.12.10",
     "jasmine-core": "~5.2.0",
     "jasmine-spec-reporter": "^7.0.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.2.0",
+    "jest": "^29.7.0",
+    "jest-preset-angular": "^14.2.4",
     "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.1.0",
     "postcss": "^8.4.45",
     "tailwindcss": "^3.4.12",
     "typescript": "~5.5.2"
