--- a/frontend/tsconfig.spec.json
+++ b/frontend/tsconfig.spec.json
@@ -5,9 +5,13 @@
   "compilerOptions": {
     "outDir": "./out-tsc/spec",
     "types": [
-      "jasmine", "node"
+      "jest", "node"
     ]
   },
+  "files": [
+    "src/test.ts",
+    "src/polyfills.ts"
+  ],
   "include": [
     "src/**/*.spec.ts",
     "src/**/*.d.ts"
