--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,8 @@ services:
     volumes:
       - ./db/db.sql:/docker-entrypoint-initdb.d/db.sql
       - mysql_data:/var/lib/mysql
-    ports:
-      - "${MYSQL_PORT}:3306"
+#    ports:
+#      - "${MYSQL_PORT}:3306"
     networks:
       - my_network
 
@@ -18,8 +18,8 @@ services:
       PMA_HOST: mysql
       PMA_USER: ${PMA_USER}
       PMA_PASSWORD: ${PMA_PASSWORD}
-    ports:
-      - "${PHPMYADMIN_PORT}:80"
+#    ports:
+#      - "${PHPMYADMIN_PORT}:80"
     depends_on:
       - mysql
     networks:
@@ -28,8 +28,8 @@ services:
   spring-boot-app:
     build:
       context: ./server
-    ports:
-      - "${SPRING_PORT}:8080"
+#    ports:
+#      - "${SPRING_PORT}:8080"
     environment:
       - JWT_SECRET=${JWT_SECRET}
       - SPRING_APPLICATION_NAME=${SPRING_APPLICATION_NAME}
@@ -71,8 +71,8 @@ services:
     build:
       context: .
       dockerfile: frontend/Dockerfile
-    ports:
-      - "${ANGULAR_PORT}:4200"
+#    ports:
+#      - "${ANGULAR_PORT}:4200"
     volumes:
       - ./frontend:/app
       - /app/node_modules
@@ -92,8 +92,8 @@ services:
       - DOCKER_INFLUXDB_INIT_BUCKET=${INFLUXDB_BUCKET_REAL}
       - DOCKER_INFLUXDB_INIT_RETENTION=${INFLUXDB_INIT_RETENTION}
       - DOCKER_INFLUXDB_INIT_ADMIN_TOKEN=${INFLUXDB_INIT_ADMIN_TOKEN}
-    ports:
-      - "${INFLUXDB_PORT}:8086"
+#    ports:
+#      - "${INFLUXDB_PORT}:8086"
     volumes:
       - influxdb_data:/var/lib/influxdb2
       - ./influxdb/init_influxdb.sh:/docker-entrypoint-initdb.d/init_influxdb.sh
@@ -107,14 +107,15 @@ services:
   grafana:
     image: grafana/grafana:11.2.3
     container_name: grafana
-    ports:
-      - "${GRAFANA_PORT}:3000"
+#    ports:
+#      - "${GRAFANA_PORT}:3000"
     environment:
       - GF_SECURITY_ADMIN_USER=${GF_SECURITY_ADMIN_USER}
       - GF_SECURITY_ADMIN_PASSWORD=${GF_SECURITY_ADMIN_PASSWORD}
       - GF_AUTH_ANONYMOUS_ENABLED=true
       - GF_AUTH_ANONYMOUS_ORG_ROLE=Viewer
       - GF_SECURITY_ALLOW_EMBEDDING=true
+      - GF_SERVER_ROOT_URL=${GF_SERVER_ROOT_URL}
     volumes:
       - grafana_data:/var/lib/grafana
       - ./grafana/provisioning:/etc/grafana/provisioning
@@ -126,9 +127,9 @@ services:
   mosquitto:
     image: eclipse-mosquitto
     container_name: mosquitto
-    ports:
-      - "${MOSQUITTO_PORT_MQTT}:1883"
-      - "${MOSQUITTO_PORT_WEBSOCKETS}:9001"
+#    ports:
+#      - "${MOSQUITTO_PORT_MQTT}:1883"
+#      - "${MOSQUITTO_PORT_WEBSOCKETS}:9001"
     volumes:
       - ./mosquitto/config:/mosquitto/config
       - ./mosquitto/data:/mosquitto/data
@@ -145,11 +146,11 @@ services:
     container_name: caddy_server
     restart: unless-stopped
     ports:
-      - "80:80"    # Puerto HTTP
-      - "443:443"  # Puerto HTTPS
-      - "8443:8443" # Puerto HTTPS adicional para el backend
+      - "80:80"       # Puerto HTTP
+      - "443:443"     # Puerto HTTPS
+      - "8443:8443"  # Puerto HTTPS adicional para el backend
     volumes:
-      - ./Caddyfile:/etc/caddy/Caddyfile
+      - ./caddy/Caddyfile:/etc/caddy/Caddyfile
       - caddy_data:/data
       - caddy_config:/config
     depends_on:
@@ -157,6 +158,19 @@ services:
       - spring-boot-app
     networks:
       - my_network
+
+#  nginx:
+#    image: nginx:latest
+#    container_name: nginx_proxy
+#    ports:
+#      - "1883:1883"
+#    volumes:
+#      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+#    depends_on:
+#      - mosquitto
+#      - spring-boot-app
+#    networks:
+#      - my_network
 
 volumes:
   mysql_data:
